option(HUT_ENABLE_IMGDEC_LIBSPNG "Enable libspng backend" TRUE)

set(HUT_IMGDEC_LIBS "")
set(HUT_IMGDEC_DEFINITIONS "")

if (HUT_ENABLE_IMGDEC_LIBSPNG)
    find_package(SimplePNG REQUIRED)
    set(HUT_IMGDEC_DEFINITIONS ${HUT_IMGDEC_DEFINITIONS} -DHUT_ENABLE_IMGDEC_LIBSPNG)
    set(HUT_IMGDEC_LIBS ${HUT_IMGDEC_LIBS} spng)
endif()

file(GLOB_RECURSE HUT_IMGDEC_HEADERS *.hpp)
file(GLOB HUT_IMGDEC_SOURCES *.cpp)
set(HUT_IMGDEC_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR})

add_library(hut_imgdec STATIC ${HUT_IMGDEC_HEADERS} ${HUT_IMGDEC_SOURCES})
target_link_libraries(hut_imgdec hut ${HUT_IMGDEC_LIBS})
target_compile_definitions(hut_imgdec PUBLIC ${HUT_IMGDEC_DEFINITIONS})
target_include_directories(hut_imgdec PUBLIC ${HUT_IMGDEC_INCLUDES} ${IMGDEC_INCLUDE_DIRS})
