file(GLOB_RECURSE HUT_RENDERDOC_HEADERS *.hpp)
file(GLOB HUT_RENDERDOC_SOURCES *.cpp)
set(HUT_RENDERDOC_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR})

if (HUT_PLATFORM STREQUAL "WIN32")
  file(GLOB HUT_RENDERDOC_SOURCES_WIN32 win32/*.cpp)
  set(HUT_RENDERDOC_SOURCES ${HUT_RENDERDOC_SOURCES} ${HUT_RENDERDOC_SOURCES_WIN32})
elseif (HUT_PLATFORM STREQUAL "WAYLAND")
  file(GLOB HUT_RENDERDOC_SOURCES_UNIX unix/*.cpp)
  set(HUT_RENDERDOC_SOURCES ${HUT_RENDERDOC_SOURCES} ${HUT_RENDERDOC_SOURCES_UNIX})
else()
  message(FATAL_ERROR "Unsupported platform for renderdoc impl: ${HUT_PLATFORM}")
endif()

add_library(hut_renderdoc STATIC ${HUT_RENDERDOC_HEADERS} ${HUT_RENDERDOC_SOURCES})
target_link_libraries(hut_renderdoc dl)
target_include_directories(hut_renderdoc PUBLIC ${HUT_RENDERDOC_INCLUDES} ${RENDERDOC_INCLUDE_DIRS})
